# garm2vec

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  dev_requirements.txt  example.py  pyproject.toml  requirements.txt  vscode.code-workspace
.github/workflows/: python_workflow.yml
garm2vec/: __init__.py  constants.py  garm2vec_model.py  helpers.py
garm2vec/_training/: colab.py  config.py  data.py  feature_extraction.py  helpers.py  model_components.py  tensorboard_bug_fix.py  training.py
garm2vec/console/: application.py  plot_command.py  vector_command.py
garm2vec/model/garm2vec_model/: saved_model.pb
garm2vec/model/garm2vec_model/variables/: variables.data-00000-of-00001  variables.index
tests/: conftest.py  constants.py  helpers.py  test_garm2vec.py  test_vector_similarities.py
